# k1x-jpu

./: CMakeLists.txt  format.sh
debian/: README.Debian  changelog  control  copyright  install  postinst
etc/init.d/: jpu.sh
jpuapi/: jdi.c  jdi.h  jpu.h  jpuapi.c  jpuapifunc.c  jpuapifunc.h  jpudecapi.c  jpuencapi.c  jputable.h  list.h  mm.c  mm.h  regdefine.h
jpuapi/include/: jpuapi.h  jpuconfig.h  jpudecapi.h  jpuencapi.h  jputypes.h
sample/: main_dec_test.c  main_enc_test.c
sample/dmabufheap/: BufferAllocator.cpp  dmabufheap-defs.h
sample/helper/: bitstreamfeeder.c  bitstreamwriter.c  bsfeeder_fixedsize_impl.c  datastructure.c  datastructure.h  jpuhelper.c  jpulog.c  jpulog.h  main_helper.h  platform.c  platform.h  yuv_feeder.c  yuv_feeder.h
usr/lib/systemd/system/: jpu.service
